Fixed error presented after using validator for HTML.

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,8 @@
     <section>
         <form id="add-joke-form">
             <h2>Add new joke</h2>
-            <select id="form-category" name="category" placeholder="Joke Type" required>
-                <option disabled selected>Select a category</option>
+            <select id="form-category" name="category" required>
+                <option value="" disabled selected>Select a category</option>
                 <option value="Funny Joke">Funny Joke</option>
                 <option value="Lame Joke">Lame Joke</option>
             </select>
